[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Julian Gindi <julian@gindi.io>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

